extracted raritan simulator in own project